# SystemIntegration

./: .gitignore  SystemIntegration.sln
01._Data_Files/: me.csv  me.yaml
01._Program_Files/: GoogleGetter.sh  NodeParser.js  PythonParser.py
02._Modules/html_no_modules/: index.html  index.js  myModule.js
02._Modules/html_with_modules/: index.html  index.js  myModule.js
02._Modules/node_commonjs_modules/: index.js  myModule.js
02._Modules/node_es_modules/: index.js  myModule.js
02._Modules/python_modules/my_module/: file_one.py  file_two.py
04._Encoding_Decoding/node/: index.js
04._Encoding_Decoding/python/: main.py
06._Servers/Python/: main.py  pyproject.toml
08._Server-To-Server/Node/: app.js  package-lock.json
08._Server-To-Server/Node2/: app.js  index.html  package-lock.json  package.json
08._Server-To-Server/Python/: main.py  pyproject.toml
08._Server-To-Server/dotnet/: main.csproj
09._Environment_Variables/Node/: .env-dev  .env_template  index.js  package.json
09._Environment_Variables/Python/: .env_template  main.py  pyproject.toml
10._Date/Node/: index.js
10._Date/Python/: main.py
11._Short_Polling/Node/: app.js
11._Short_Polling/Node/public/: index.html
12._Long_Polling/Node/: app.js
13._Server-sent_Events/Node-sse/: app.js
13._Server-sent_Events/Node-sse/public/: index.html
13._Server-sent_Events/Python-sse/: main.py  pyproject.toml
13._Server-sent_Events/Python-sse/templates/: index.html
15._Github_WebHooks/Node-webhooks/: app.js  package-lock.json  package.json
15._Github_WebHooks/python-webhooks/: main.py  pyproject.toml
17._MultiPart_Forms/: index.html
17._MultiPart_Forms/Node/: app.js  package-lock.json  package.json
17._MultiPart_Forms/Python/: main.py  pyproject.toml
18._images/: base64.html
19._Audio/: index.html
20._Mpeg_Dash/: app.js
20._Mpeg_Dash/Public/: index.html
25._OpenAPI/node-OpenAPI/: app.js
25._OpenAPI/node-OpenAPI/routers/: usersRouter.js
25._OpenAPI/python-OpenAPI/: main.py  openapi.json  pyproject.toml
25._OpenAPI/python-OpenAPI/routers/: __init__.py  spacecreaft_router.py
26._GraphQL/Node_Basic/: app.js
26._GraphQL/Node_Basic/public/: index.html
26._GraphQL/Python/: pyproject.toml
27._Web_Scraping_Crawling/01.Node/: index.html  index.js  package-lock.json  package.json
27._Web_Scraping_Crawling/02.Python/: main.py  pyproject.toml
27._Web_Scraping_Crawling/04._Scrapy_basic/: pyproject.toml
27._Web_Scraping_Crawling/05._Scrapy_wiki_crawler/: pyproject.toml
Assignments/01._Data_Files/: me.json  me.txt
Assignments/01._Program_Files/: NodeParser.js  PythonParser.py
Assignments/02.Data_Parsing_Server/: main.py
Assignments/03._Data_Parsing_Server_Part2/Node/: app.js
Assignments/03._Data_Parsing_Server_Part2/Node/Data_Files/: me.csv  me.xml
Assignments/03._Data_Parsing_Server_Part2/Python/: main.py  pyproject.toml
Assignments/04a._SSE/: main.py  pyproject.toml
Assignments/04a._SSE/templates/: index.html
Assignments/04b._Granular_Access/: Link.md
Assignments/05._Webhooks/: documentation.md  main.py  pyproject.toml
Assignments/06._Websocket/: ConnectionController.py  main.py  pyproject.toml
Assignments/06._Websocket/static/: index.html
Assignments/08a._Document_A_Database/: link.md
Assignments/08b._Migrate_Database/: alembic.ini  pyproject.toml  readme.md
Assignments/08b._Migrate_Database/alembic/: env.py
Assignments/08b._Migrate_Database/alembic/versions/: 2453a0e0ff7b_create_database_migration.py  46efc71b4862_create_new_table.py
Assignments/08c._Auth/: main.py  pyproject.toml  readme.md
Assignments/08c._Auth/static/: login.html  register.html  secret.html
Assignments/10a._GraphQL/04._python_ariadne/: pyproject.toml
Assignments/10a._GraphQL/04._python_ariadne/database/: book_crud.py
Assignments/10b._Payment_Processing/Server/: package-lock.json  package.json  server.js
Assignments/10b._Payment_Processing/Server/public/: script.js
