[tool.poetry]
name = "05-webhooks"
version = "0.1.0"
description = ""
authors = ["Nicolas-Mousten <nicolas.mousten@gmail.com>"]
readme = "README.md"
packages = [{include = "05"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
