[tool.poetry]
name = "08c-auth"
version = "0.1.0"
description = ""
authors = ["Nicolas-Mousten <nicolas.mousten@gmail.com>"]
readme = "README.md"
packages = [{include = "08c"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.1.3"
jinja2 = "^3.1.3"
pyjwt = "^2.8.0"
python-multipart = "^0.0.9"
python-jose = "^3.3.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
